src/test/ui/error-codes/E0411.rs
fn main() {
    <Self>::foo; //~ ERROR E0411
}
